# fluid_sim

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
header/: Vector2f.hpp  circle.hpp  constants.hpp  kernels.hpp  particles.hpp  timer.hpp  vector2f.hpp
src/: Vector2f.cpp  circle.cpp  main.cpp  particles.cpp  timer.cpp  vector2f.cpp
